--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
       android:theme="@style/AppTheme">
       <meta-data 
         android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyBOi9Fo6kX2SFqeqgVH5aPrIun7xq7w8SA" 
+        android:value="${MAPS_API_KEY}" 
       />
       <activity
         android:name=".MainActivity"
