--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ra": "yarn android && yarn start",
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator='iPhone 14 Pro'",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
@@ -16,9 +16,10 @@
     "@react-native-firebase/auth": "^14.5.0",
     "@react-native-firebase/firestore": "^14.5.0",
     "@react-native-firebase/storage": "^14.5.0",
-    "@react-navigation/bottom-tabs": "^6.2.0",
-    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.5.0",
+    "@types/react-native": "^0.71.5",
     "luxon": "^2.3.1",
     "polished": "^4.1.4",
     "react": "17.0.2",
@@ -34,8 +35,8 @@
     "react-native-mask-input": "^1.2.0",
     "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.11.2",
-    "react-native-safe-area-context": "^4.0.1",
-    "react-native-screens": "^3.12.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-svg": "^12.1.1",
     "react-native-toast-message": "^2.1.1",
     "react-native-vector-icons": "^9.1.0"
@@ -44,11 +45,17 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@tsconfig/react-native": "^2.0.3",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.31",
+    "@types/react-native-vector-icons": "^6.4.13",
+    "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "typescript": "^5.0.3"
   },
   "jest": {
     "preset": "react-native"
