--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ra": "yarn android && yarn start",
     "android": "react-native run-android",
-    "ios": "react-native run-ios --simulator='iPhone 14 Pro'",
+    "ios": "react-native run-ios --simulator='iPhone 13'",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
@@ -19,19 +19,21 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.5.0",
+    "@types/luxon": "^3.3.0",
     "@types/react-native": "^0.71.5",
     "luxon": "^2.3.1",
     "polished": "^4.1.4",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-config": "^1.5.1",
     "react-native-dotenv": "^3.3.1",
     "react-native-geocoding": "^0.5.0",
-    "react-native-global-props": "^1.1.5",
     "react-native-image-picker": "^4.7.3",
     "react-native-image-slider-box": "^1.1.18",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-keyboard-spacer": "^0.4.1",
-    "react-native-maps": "^0.30.1",
+    "react-native-linear-gradient": "^2.7.3",
+    "react-native-maps": "1.7.1",
     "react-native-mask-input": "^1.2.0",
     "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.11.2",
